--- a/src/styles.css
+++ b/src/styles.css
@@ -1,19 +1,71 @@
-h1 {
-  color: #ffffff;
-  font-family: "Poppins";
+body {
+  font-family: "Poppins", sans-serif;
+  background-color: #272044;
+}
+
+header h1 {
   font-style: normal;
   font-weight: 700;
   font-size: 96px;
-  line-height: 144px;
+  line-height: 1;
+  margin: 30px 0;
 }
-
+header h2 {
+  font-weight: 400;
+  font-size: 40px;
+  line-height: 1.5;
+  margin: 0;
+}
+header h3 {
+  font-weight: 900;
+  font-size: 24px;
+  line-height: 1.5;
+  letter-spacing: 5px;
+  margin: 0;
+}
+header a {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.5;
+  text-align: center;
+  letter-spacing: 3px;
+  text-transform: uppercase;
+  color: #272044;
+  background: white;
+  text-decoration: none;
+  padding: 16px 32px 16px 32px;
+  width: 179;
+  height: 53;
+  gap: 10px;
+  margin-top: 32px;
+  display: inline-block;
+}
 header {
-  max-width: 1200px;
-  margin: 0 auto;
-  background-image: url("/images/kristiansand.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.6)),
+    url("/images/kristiansand.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   text-align: center;
-  padding: 60px 0;
+  padding: 200px 0;
+  color: #ffffff;
+}
+.container {
+  max-width: 1400px;
+  margin: 0 auto;
+}
+
+@media (max-width: 800px) {
+  header {
+    padding: 60px 0;
+  }
+  header h1 {
+    font-size: 48px;
+  }
+  header h2 {
+    font-size: 20px;
+  }
+  header h3 {
+    font-size: 12px;
+  }
 }
