--- a/src/styles.css
+++ b/src/styles.css
@@ -50,11 +50,48 @@ header {
   padding: 200px 0;
   color: #ffffff;
 }
+footer {
+  color: white;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.8)),
+    url("/images/bg.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  padding: 100px 0;
+}
+footer h3 {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 100%;
+  letter-spacing: 0%;
+}
+footer p {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+}
+footer li {
+  list-style: none;
+}
+footer a {
+  color: white;
+  opacity: 0.7;
+}
+footer ul {
+  padding: 0;
+}
+section {
+  max-width: 1200px;
+  margin: 0;
+}
 .container {
   max-width: 1400px;
   margin: 0 auto;
 }
-
+.grid {
+  display: grid;
+  grid-template-columns: 1fr 3fr 2fr;
+}
 @media (max-width: 800px) {
   header {
     padding: 60px 0;
